gcc/testsuite/rust/rustc/ui/unknown-tool-name.rs
#[foo::bar] // { dg-error ".E0433." "" { target *-*-* } }
fn main() {}

